[edit] Euler - added converges absolutely condition

--- a/_posts/math-physics/2022-12-27-euler.md
+++ b/_posts/math-physics/2022-12-27-euler.md
@@ -129,6 +129,8 @@ e^{i\theta} &= \color{#7CB300}{1} + \color{#B06103}{i\theta} + \color{#7CB300}{\
 \end{align*}
 $$
 
+**Note:** We can rearrange the terms in the infinite series because it converges absolutely to $e^{i\theta}$. For more information, check out [https://en.wikipedia.org/wiki/Riemann_series_theorem](https://en.wikipedia.org/wiki/Riemann_series_theorem). Credit to a friend who pointed a flaw in my work.
+
 We started with a Taylor polynomial of $e^{i\theta}$ and derived Euler's Formula. How neat is this. All it requires is knowledge of first-year Math to be able to derive Euler's formula.
 
 ## Conclusion
