--- a/_posts/course-reviews/2023-05-06-math2000.md
+++ b/_posts/course-reviews/2023-05-06-math2000.md
@@ -25,7 +25,9 @@ The review is split into 2 main parts:
                                                                                  
 **Course Delivery:** Synchronous recorded lectures with synchronous tutorials
                                                                                  
-**Class Size:**  63 students (Dec 31 2022)                                             
+**Class Size:**  
+* 63 students (Dec 31 2022)                                             
+* 53 students (March 28 2023) <small>![OIRP](https://oirp.carleton.ca/course-inst/tables/2023w-course-inst_hpt.htm)</small>
 
 **Course Description (from website):** Higher dimensional calculus, chain rule, gradient, line and multiple integrals with applications. Use of implicit and inverse function theorems. Real number axioms, limits, continuous functions, differentiability, infinite series, uniform convergence, the Riemann integral. 
 
@@ -146,6 +148,28 @@ For context, $S^\circ$ means the set of all points in S that are interior points
 
 In simpler terms, if a ball centered at some point can contain points **both** within the set S and it's complement (i.e. outside the set), then the point is a **boundary** point. This definition intuitively makes sense with an illustration. The fact that a ball can be drawn around the boundary points containing points inside and outside the set is what differentiates from interior points. Let's relate this new definition of open set with what we know about sets from Highschool. `[0, 1]` is a closed set where 0 and 1 are boundary points of the set. 
 
+![An illustration of an interval containing boundary points](../assets/math-physics/handrawn-diagrams/math2000/boundary-pt2.jpg)
+<p class = "caption">An illustration of the set [0,1] with a ball around the boundary points</p>
+
+The set `[0, 1]` is closed because we can draw a "ball" (an interval since this is in one dimension) around the point 0 and the point 1 such that the interval will contain points greater than 0/1 and smaller than 0/1 respectively regardless how small the interval $r_1, r_2$ are. It's interesting to see a formal way to define whether or not a set is closed or open.
+
+The next set of topics is related to limits. The definition for limit hasn't changed too much from first year but the key difference is that the limit from **all** directions needs to converge to the same point. The simplest definition for a limit to exist at the point a  are the following:
+
+> **First Year:** $\lim\limits_{x\to a} f(x) = L \iff \lim\limits_{x\to a^-} f(x) = \lim\limits_{x\to a^+} f(x) = L$
+
+> **Second Year:** $\lim\limits_{x\to \vec{a}} \vec{f}(\vec{x}) = \vec{L} \iff \lim\limits_{\vec{x}\to \vec{a}} f_i(\vec{x})=L_i \quad \forall 1 \le i \le m$
+
+The following definitions can also be expressed as the following:
+
+> **First Year:** $\lim\limits_{x\to a} f(x) = L \iff \lim\limits_{x\to a} \|f(x)-L\| = 0$
+
+> **Second Year:** $\lim\limits_{x\to \vec{a}} \vec{f}(\vec{x}) = \vec{L} \iff \lim\limits_{x\to \vec{a}} \|\vec{f}(\vec{x}) - \vec{L}\| = 0$ 
+
+Although the definition seems a bit more rigorous, it still lacks rigor. These definition have no rigor and relies on the fact that the reader understands what a limit (i.e. `lim`) even means. Therefore, the delta-epsilon notation was introduced in first year:
+
+> **First Year:** $\lim\limits_{x\to a} f(x) = L \iff \forall \ \epsilon > 0, \exists \ \delta > 0 $ such that $0 < \|x-a\| < \delta \ \& \ x\in dom(f) \implies \|f(x)-L\| < \epsilon$
+
+> **Second Year:** $\lim\limits_{x\to \vec{a}} \vec{f}(\vec{x}) = \vec{L} \iff \forall \ \epsilon > 0, \exists \ \delta > 0 $ such that $0 < \|\vec{x}-\vec{a}\| < \delta \& x\in S \implies \|\vec{f}(\vec{x})-\vec{L}\| < \epsilon$
 
 ---
 
