[post draft] math2000 - 1/3 of winter completed

--- a/_posts/course-reviews/2023-05-06-math2000.md
+++ b/_posts/course-reviews/2023-05-06-math2000.md
@@ -301,6 +301,101 @@ The definition for a smooth surface is different but I want to move along to des
 
 ## Winter Semester (Integration in Higher Dimensions and on Vector Fields)
 
+The start of the semester parallels with how MATH2052 begins by reviewing Darboux Sums and the definition of integrability. Unfortunately, Folland, the author of the textbook  Advanced Calculus, prefers to call Darboux Sums and Darboux Integrals as Riemann Sums and Riemann Integrals even though it's Darboux. In addition, Folland uses different notation for Lower and Upper Darboux Sums/Integrals. Here are some notation translation if I recall correctly what we used last year:
+
+> **Upper Darboux Sum:** $U(f,p) = S_pf = \sum\limits_{k=1}^n M(f, [t_{k-1}, t_k])(t_k - t_{k-1}) = \sum\limits_{k=1}^n M_k(t_k - t_{k-1})$
+
+> **Lower Darboux Sum:** $L(f,p) = s_pf = \sum\limits_{k=1}^n m(f, [t_{k-1}, t_k])(t_k - t_{k-1}) = \sum\limits_{k=1}^n m_k(t_k - t_{k-1})$
+
+Notice how $U(f,p)$ is now $S_pf$ where the letter `S` is supposed to represent sum from my understanding. If we are denoting upper sum, it's a captial `S` and if we are denoting for a lower sum, it's a lowercase `s`. While the notation is clear in the text, the notation is not ideal because it is easy to be confused between the two when the notation is written by hand. Another issue with this new notation is that there is a loss of information with the notation of max `M` and min `m`. In case you forgot what the definition of max and min are, here's the definition from first year.
+
+For a set $S \subseteq [a,b]$ and $f$ is bounded on [a,b]:
+
+> **Max:**  $M(f, S) = sup\\{f(x): x\in S\\}$
+
+> **Min:** $m(f,S) = inf\\{f(x): x\in S\\}$ 
+
+These determine the height of your rectangles for each partition. But the new notation used in the course is bad because it's vague and loose. In first year, the max and min "function" requires two parameters, the function and the subset that the function maps to. However, the new notation omits the first parameter, the function. So how would one know 
+what function is being applied in the max or min. It is clear from context what function is binded to the min or max since the lower or upper darboux sum does require you to specify the function. In my opinion, it gets a bit wonky when you are trying to show that a function `g` that is strictly greater than a function `f` using this new notation because both functions have the same min or max. So you need to introduce a new min or max for one of the functions to avoid confusion.
+
+What about integrability? The idea and every lemma and theorem from first year are the same inclusing the Cauchy Criterion. As mentioned before, the notation for integrability did change. This new notation is actually more intuitive than our first year notation.
+
+> **Upper Darboux Integral:** $U(f) = \bar{I}_a^b = inf\\{S_pf: $P is a partition of $[a,b]\\}$
+
+> **Lower Darboux Integral:** $L(f) = \underline{I}_a^b = sup\\{s_pf: P$ is a partition of $[a,b]\\}$
+
+Similar to the new notation for Darboux Sums, the letter is more intuitive as `I` stands for integrability. I am so glad the author did not use a lowercase `i` to state Lower Darboux Integral. The bar and underline is also intuitive and also provides us information on where the function f is bounded. However, the function is ommitted ... unless I have my notes written incorrectly.
+
+A theorem in class proposes that every continuous function is integrable which sounds reasonable without even looking at the proof. One would think that any continuous curve will have some area that can be measured. What about discontinous functions? From MATH2052, you may have recalled that a function that is discontinuous at a finite number of points is still integrable. However, infinite sets such as a converging sequence can also be integrable as well. This may sound very counter-intuitive and yes we do have to be careful about this claim. There are two criteria that must be satisfied. We have no formal theorem in first-year to cover this case. The theorem goes along like this:
+
+> **THM 4.13:** If f is bounded on [a,b] and the set of points in [a,b] at which f is discontinuous has zero content, then f is integrable on [a, b]
+
+To understand this theorem, we need to first understand what zero content is.
+
+> **Zero Content:** a set $Z\subseteq \mathbb{R}$ has zero content if $\forall \epsilon > 0, \exists$ in tervals $I_1, I_2, ..., I_n$ such that:
+> 1. $Z \subseteq \bigcup\limits_{i=1}^{n}I_i$
+> 2. $\sum\limits_{i=1}^{n}$len($I_i$) < $\epsilon$
+
+Informally,
+
+>  zero content means small enough to be negligible, for purposes of integration.
+> -- <a href = "https://www.math.toronto.edu/courses/mat237y1/20189/notes/Chapter4/S4.1.html">UofT MAT237 Notes</a>
+
+Essentially, if a bounded function has zero content, the discontinuity is so small that it is negligible. Hence why we can ignore the discontinuity and still be able to calculate the integral of the function between [a, b]. I for some reason has some fixation trying to visualize what zero content is but as Folland says, `the reader should not attach undue importance to it`. I spent way too much time trying to conceptualize this definition fruitlessly during the course. So what is the definition of zero content telling us?
+
+a bounded function could still be integrable even if it's infinitely discountinuous as long as:
+
+1. the discontinuity can be covered by finitely many intervals **AND**
+2. the total length of the intervals is arbitrarly so small that it's insignificant
+
+As with any calculus course, the fundamental theorem of calculus is once again mentioned but this time, it'll also mention about zero content. The course continues to chapter 4.2 of the textbook which is integration on higher dimensions. The darboux sums and darboux integrals are extended to higher dimensions by treating the partitions to be rectangles instead of just intervals in one-dimension. 
+
+I'll be transparent and say that the material I am about to mention from now on is something I am not comfortable with so take what I say with a grain of salt and fact-check whatever I am about to say.
+
+The definition of **characteristic function** is given which is essentially a piecewise function that returns 1 if the point is in the set and returns 0 otherwise.
+
+> **Characteristic Function:** given $S\subseteq \mathbb{R}^n$, the characteristic function of S is $\chi_s(\vec{x}) = \begin{cases}1&\mbox{ if } x\in S \\\\\\\\0&\mbox{ if } x\not\in S\end{cases}$
+
+What is the point of this function you may ask? In higher dimensions, we care about integrating a function whose domain is not a rectangle. We extend the set in which we integrate by bounding it with a sufficiently large rectangle box R containing a non-rectangular set S. However, this will introduce a bigger set to integrate over than desired. Hence why the characteristic function was introduced. The characteristic function allows us to integrate over the rectangle without worry since anything that is not in the set is 0. So we have the integral:
+
+> $\int\int_S fdA = \int\int_R f\chi_s dA$
+
+The next topic introduced is **Jordan Measurable** which I guess was introduced to extend the definition of the integral beyond just rectangles. But it'll be important for the upcoming theorems in the course.
+
+> **Jordan Measurable:** $S\subseteq \mathbb{R}^2$ is Jordan Measurable if $\partial S$ has zero content
+
+You'll have to take the course to get a more detail look at why we introduce Jordan Measurabe. As I do not have good understanding of the material, I'm just going to skip a lot of details and start talking about Iterated Integrals.
+
+If you ever asked someone who took any version of multivariable calculus, they are going to tell you that taking the integral of a n-dimensional space is just repeated single variable integration where you treat the other variables as constants like what we do when computing partial derivatives. Fubini's Theorem is what allows us to do this. In the 2-dimensional case, we can think of it as splitting the region into very thin vertical/horizontal slices and then calculate the area of each vertical/hoirzontal slice. The sum of the area of all the slices will be the area of the region. One nice thing about integration is that you can change the order of integration and you should get the same result if the function is nice like a continuous function. 
+
+$\int\limits_0^1\int\limits_{-1}^2\int\limits_0^3 xyz^2dzdydx = \int\limits_{-1}^2\int\limits_{0}^3\int\limits_0^1 xyz^2dxdzdy$
+
+Note that we start by dealing with the innermost integral and proceed to solve the single variable integration outward one by one till we get to the outermost integral (i.e. the last integral remaining in the equation).
+
+$\int_0^2\int_0^1 xy dydx = \int_0^2(\int_0^x xy dy)dx = \int_0^2 x(\frac{y^2}{2}\bigm\|_0^x) dx = \frac{1}{2}\int_0^2 x(x^2 - 0^2)dx = \frac{1}{2}\int_0^2 x^3dx = \frac{1}{2}(\frac{x^4}{4}\bigm\|_0^2) = \frac{1}{8}(2^4 - 0^4) = 2$
+
+The next type of integration done in the course is what is called `Change of Variables`. This sort of reminds me of Special Relativity which I dropped in the sense that we can transform or change our frame of reference and the system should remain invariant (i.e. the physical reality does not change even if a transformation is applied onto the system). So if we were to scale, shift (translate), or rotate our coordinate system, the area or volume under the region should be invariant (not changing). It turns out that changing our coordinate system can make our lives easier. The `Change of Variables` has the form:
+
+> $\int_I f(x)dx = \int_{g^{-1}(I)} f(g(u))\|g'(u)\|du$
+
+When working on integration problems from here on, it's best to see examples and practice which I did not do enough of ... Anyhow, there are three big coordinate systems you need to remember for this course:
+
+1. Polar Coordinates
+2. Cylindrical Coordinates
+3. Spherical Coordinates
+
+Polar coordinates is something you should be somehwat already familiar with. When working on complex numbers, polar coordinates is in the form $r(\cos\theta + i\sin\theta)$. So we have the following:
+
+* $x = r\cos\theta$ 
+* $y = r\sin\theta$
+* $r = \sqrt{x^2 + y^2}$
+
+Here's where I get confused where the heck the special factor comes from. The `change of variables` can be rewritten as the following:
+
+>  $\int_I f(x)dx = \int_{g^{-1}(I)} f(g(u))\|det Dg(u)\|du$
+
+This definition introduces the Jacobian $\|det Dg\|$
+
 ---
 
 # Review
