[draft] math2000 & math2100

--- a/_posts/course-reviews/2023-05-06-math2000.md
+++ b/_posts/course-reviews/2023-05-06-math2000.md
@@ -392,9 +392,52 @@ Polar coordinates is something you should be somehwat already familiar with. Whe
 
 Here's where I get confused where the heck the special factor comes from. The `change of variables` can be rewritten as the following:
 
->  $\int_I f(x)dx = \int_{g^{-1}(I)} f(g(u))\|det Dg(u)\|du$
+>  $\int_I f(x)dx = \int_{g^{-1}(I)} f(G(u))\|det DG(u)\|du$
 
-This definition introduces the Jacobian $\|det Dg\|$
+This definition introduces the Jacobian of the change of variables $\|det Dg\|$. This magically appears out of nowhere, at least to my mind. I do not know as to how the Jacobian of the change of variables appears and this did cause a great confusion in my head. However, you can safetly ignore the derivation and accept the equation as is. Jacobian matrix is something you may or may not have seen in first year linear algebra but it's somewhat implied you should know this in MATH2454 ODE I believe.
+
+Using this new equation, we can determine how to reorient the problem to use polar coordinates as follows:
+
+$(x,y) = G(r, \theta) = (r\cos\theta, r\sin\theta)$
+
+so
+
+$$\begin{aligned}
+\rvert det Dg(r, \theta)\lvert &= 
+\Biggm\rvert det\begin{bmatrix}
+\frac{\partial}{\partial r}x & \frac{\partial}{\partial \theta}x \\
+\frac{\partial}{\partial r}y & \frac{\partial}{\partial \theta}y
+\end{bmatrix}\Biggm\lvert \\
+&= 
+\Biggm\rvert det\begin{bmatrix}
+\frac{\partial}{\partial r}x & \frac{\partial}{\partial \theta}x \\
+\frac{\partial}{\partial r}y & \frac{\partial}{\partial \theta}y
+\end{bmatrix}\Biggm\lvert \\
+&=
+\Biggm\rvert det
+\begin{bmatrix}
+\frac{\partial}{\partial r}r\cos\theta & \frac{\partial}{\partial \theta}r\cos\theta \\
+\frac{\partial}{\partial r}r\sin\theta & \frac{\partial}{\partial \theta}r\sin\theta 
+\end{bmatrix}\Biggm\lvert \\
+&=
+\Biggm\rvert det
+\begin{bmatrix}
+\cos\theta & -r\sin\theta \\
+\sin\theta & r\cos\theta 
+\end{bmatrix}\Biggm\lvert \\
+&=\rvert\cos\theta(r\cos\theta) - (-r\sin\theta)(\sin\theta)\lvert \\
+&=\rvert r\cos^2\theta + r\sin^2\theta \lvert \\
+&=\sqrt{(r\cos^2\theta)^2 + (r\sin^2\theta)^2} \\
+&=\sqrt{r^2 (\cos^2\theta + \sin^2\theta)^2} \\
+&=\sqrt{r^2 (1)^2} \\
+&=\sqrt{r^2} \\
+&= r
+\end{aligned}
+$$
+
+Hence, the integral when reoriented in polar coordinates, we have:
+
+> **Polar Coordinates:** $\int\int_S fdA = \int\int_{G^{-1}_\text{polar}(S)} f(r\cos\theta, r\sin\theta)rdrd\theta$
 
 ---
 
