[draft] math2000 - started vector calc

--- a/_posts/course-reviews/2023-05-14-math2000.md
+++ b/_posts/course-reviews/2023-05-14-math2000.md
@@ -17,8 +17,13 @@ This is a review of the first half of the course (the course is 8 months long, 1
 
 The review is split into 2 main parts:
 1. [Long Course Description](#ldesc): In-depth talk about the course topic from how I understood it
-* [Fall Semester: Open Balls and Differentiability](#ldesc-fall)
-* [Winter Semester: Integration in Higher Dimensions and on Vector Fields](#ldesc-winter)
+- [Course Description (LONG) with Commentary:](#course-description-long-with-commentary)
+  - [Fall Semester (Open Balls and Differentiability)](#fall-semester-open-balls-and-differentiability)
+  - [Winter Semester (Integration in Higher Dimensions and on Vector Fields)](#winter-semester-integration-in-higher-dimensions-and-on-vector-fields)
+    - [Integration of Functions](#integration-of-functions)
+    - [Integration of Vectors](#integration-of-vectors)
+- [Review](#review)
+- [Credits:](#credits)
 2. [Course Review](#review): Solely focuses on the teaching style, difficulty, and anything that would be of interest
 
 ---                                                                             
@@ -301,6 +306,8 @@ The definition for a smooth surface is different but I want to move along to des
 
 ## Winter Semester (Integration in Higher Dimensions and on Vector Fields)
 
+### Integration of Functions
+
 The start of the semester parallels with how MATH2052 begins by reviewing Darboux Sums and the definition of integrability. Unfortunately, Folland, the author of the textbook  Advanced Calculus, prefers to call Darboux Sums and Darboux Integrals as Riemann Sums and Riemann Integrals even though it's Darboux. In addition, Folland uses different notation for Lower and Upper Darboux Sums/Integrals. Here are some notation translation if I recall correctly what we used last year:
 
 > **Upper Darboux Sum:** $U(f,p) = S_pf = \sum\limits_{k=1}^n M(f, [t_{k-1}, t_k])(t_k - t_{k-1}) = \sum\limits_{k=1}^n M_k(t_k - t_{k-1})$
@@ -427,17 +434,158 @@ $$\begin{aligned}
 \end{bmatrix}\Biggm\lvert \\
 &=\rvert\cos\theta(r\cos\theta) - (-r\sin\theta)(\sin\theta)\lvert \\
 &=\rvert r\cos^2\theta + r\sin^2\theta \lvert \\
-&=\sqrt{(r\cos^2\theta)^2 + (r\sin^2\theta)^2} \\
-&=\sqrt{r^2 (\cos^2\theta + \sin^2\theta)^2} \\
-&=\sqrt{r^2 (1)^2} \\
-&=\sqrt{r^2} \\
-&= r
+&=\rvert r(\cos^2\theta + \sin^2\theta) \lvert \\
+&=\rvert r \lvert\\
+&= r \qquad \text{,since $r \ge 0$}
 \end{aligned}
 $$
 
 Hence, the integral when reoriented in polar coordinates, we have:
 
 > **Polar Coordinates:** $\int\int_S fdA = \int\int_{G^{-1}_\text{polar}(S)} f(r\cos\theta, r\sin\theta)rdrd\theta$
+
+Cylindrical coordinates is similar to polar coordinate but with one major disinction, a cylinder has a height. Meaning there is a 3rd-dimension along the z-axis. So we now have: $(x, y, z) = G(r, \theta, z) = (r\cos\theta, r\sin\theta, z)$. We can now compute the Jacobian for cylindrical coordinates to determine the equation for cylindrical coordinates:
+
+$$\begin{aligned}
+\rvert det Dg(r, \theta, z)\lvert &= 
+\Biggm\rvert det\begin{bmatrix}
+\frac{\partial}{\partial r}x & \frac{\partial}{\partial \theta}x & \frac{\partial}{\partial z}x\\
+\frac{\partial}{\partial r}y & \frac{\partial}{\partial \theta}y & \frac{\partial}{\partial z}y\\
+\frac{\partial}{\partial r}z & \frac{\partial}{\partial \theta}z & \frac{\partial}{\partial z}z\\
+\end{bmatrix}\Biggm\lvert \\
+&= 
+\Biggm\rvert det\begin{bmatrix}
+\frac{\partial}{\partial r}r\cos\theta & \frac{\partial}{\partial \theta}r\cos\theta & 0\\
+\frac{\partial}{\partial r}r\sin\theta & \frac{\partial}{\partial \theta}r\sin\theta & 0\\
+0 & 0 & 1\\
+\end{bmatrix}\Biggm\lvert \\
+&=
+\Biggm\rvert 
+0 - 0 + 1 \cdot det
+\begin{bmatrix}
+\cos\theta & -r\sin\theta\\
+\sin\theta & r\cos\theta\\
+\end{bmatrix}\Biggm\lvert \\
+&=
+\Biggm\rvert 
+det
+\begin{bmatrix}
+\cos\theta & -r\sin\theta\\
+\sin\theta & r\cos\theta\\
+\end{bmatrix}\Biggm\lvert \qquad\text{(same as polar coordinates)}\\
+&= r 
+\end{aligned}
+$$
+
+As expected, adding a height does not affect the scale on the xy-plane. Hence why the Jacobian remains identical to polar coordinates. Hence,
+
+> **Cylindrical Coordinates:** $\int\int_S fdA = \int\int_{G^{-1}_\text{cyl}(S)} f(r\cos\theta, r\sin\theta, z)rdrd\theta dz$
+
+The final coordinate system introduced is the spherical coordinates. This is much trickier to understand so I know some students opted to remmeber the formula. A cylinder is similar to a sphere in the sense that both shapes are circular. But a sphere is equidistant from the center of the sphere. Meaning, all 3 coordinates: x, y, z are transformed. It is no longer sufficient to have a single angle to represent the transformation. If I am not lazy, I'll program some animations in Python 
+for you to visualize how the spherical coordinates is formed. (If you do not see any animations, it means I was too lazy to write one. It does take a while since I am terrible at using Manim).
+
+In cylindrical coordinates, we had $(r\cos\theta, r\sin\theta, z)$. But the height of a sphere cannot simply be represented by the value of z. When we transform the coordinate system to spherical, we need to consider that the z coordinate is also transformed.  
+
+For now, let's focus on the first two coordinates: x and y coordinates. If you understand polar cylindrical (and therefore polar) coordinates, you can agree that x and y has some relation with $r\cos\theta$ and $r\sin\theta$:
+
+$$
+x \quad \alpha \quad r\cos\theta \nonumber\\
+y \quad \alpha \quad r\sin\theta
+$$
+
+However, this transformation only maps in the xy plane. This makes intuitive sense since this derivation came from polar coordinates which operate on the xy plane (technically, it's the $Re z = x$ and $Im z = iy$ plane). Therefore $\theta$ is the angle along the xy plane:
+
+![Illustrating the purpose of the angle theta in the xy plane](../assets/math-physics/handrawn-diagrams/math2000/theta-xy.jpg)
+
+However, this does not give us the height of the object in 3-dimensional space. Therefore, we need to introduce a z-coordinate and a new angle to represent this new height (since z coordinate has been transformed in spherical coordinates).
+
+<a name = "fig1">
+
+![Illustrating the purpose of the angle phi in the z plane](../assets/math-physics/handrawn-diagrams/math2000/phi-z.jpg)
+
+<p class = "caption"><b>Fig 1:</b> An illustration of the purpose of $\varphi$ in the z-axis</p>
+
+
+Similarly how the angle $\theta$ starts from the x-axis, $\varphi$ starts from the z-axis. One many notice that to represent any point in the xy plane, $\theta$ needs to be between 0 to 2$\pi$ radians. However, $\varphi$ is restricted from 0 to $\frac{\pi}{2}$ radians (i.e. 0 to $90^\circ$). The purpose of the z-axis is to represent the height. It is unnescessary for $\varphi$ to exceed $90^\circ$ because $\cos\varphi$ is symmetric (i.e. $\cos(\varphi) = \cos(-\varphi)$) as seen below:
+
+![cos graph from -2pi to 2pi](../assets/math-physics/cos-symm.png)
+
+Recall from Highschool the SOH CAH TOA rule. To obtain the transformed z-coordinate, we are interested in only the height (the vertical component) which happens to be $r\cos\varphi$. The xy-plane does not affect the height of the point at all. Therefore we have,
+
+$$
+x \quad \alpha \quad r\cos\theta \nonumber\\
+y \quad \alpha \quad r\sin\theta \nonumber\\
+z = r\cos\phi
+$$
+
+Notice how the point also has a horizontal component in [figure 1 above](#fig1) when I was trying to illustrate the purpose of $\varphi$ on the z-axis. It turns out that when we transformed the coordinates to spherical, $\varphi$ also impacts x and y components. The effect of the z-axis on x and y coordinates is a scalar transformation which can be modelled by the horizontal component $\sin\varphi$ (notice how we ommitted the constant factor r as this was already taken into consideraiton by the transformation to polar coordinates). We now have:
+
+$$
+x = r\sin\varphi\cos\theta \nonumber\\
+y = r\sin\varphi\sin\theta \nonumber\\
+z = r\cos\phi \nonumber\\
+
+G = (r, \theta, \phi) = (r\sin\varphi\cos\theta, r\sin\varphi\sin\theta \nonumber, r\cos\phi)
+$$
+
+All that is left is to compute the Jacobian so that we can finally figure out the equation of change of variables for spherical coordinates:
+
+$$\begin{aligned}
+\rvert det DG(r, \theta, \phi)\lvert &= 
+\Biggm\rvert det\begin{bmatrix}
+\frac{\partial}{\partial r}x & \frac{\partial}{\partial \theta}x & \frac{\partial}{\partial \varphi}x\\
+\frac{\partial}{\partial r}y & \frac{\partial}{\partial \theta}y & \frac{\partial}{\partial \varphi}y\\
+\frac{\partial}{\partial r}z & \frac{\partial}{\partial \theta}z & \frac{\partial}{\partial \varphi}z\\
+\end{bmatrix}\Biggm\lvert \\
+&= 
+\Biggm\rvert det\begin{bmatrix}
+\frac{\partial}{\partial r}r\sin\varphi\cos\theta & \frac{\partial}{\partial \theta}r\sin\varphi\cos\theta & \frac{\partial}{\partial \varphi}r\sin\varphi\cos\theta\\
+\frac{\partial}{\partial r}r\sin\varphi\sin\theta & \frac{\partial}{\partial \theta}r\sin\varphi\sin\theta & \frac{\partial}{\partial \varphi}r\sin\varphi\sin\theta\\
+\frac{\partial}{\partial r}r\cos\varphi & \frac{\partial}{\partial \theta}r\cos\varphi & \frac{\partial}{\partial \varphi}r\cos\varphi\\
+\end{bmatrix}\Biggm\lvert \\
+&=
+\Biggm\rvert det\begin{bmatrix}
+\sin\varphi\cos\theta & -r\sin\varphi\sin\theta & r\cos\varphi\cos\theta\\
+\sin\varphi\sin\theta & r\sin\varphi\cos\theta & r\cos\varphi\sin\theta\\
+\cos\varphi & 0 & -r\sin\varphi\\
+\end{bmatrix}\Biggm\lvert \\
+&=
+\Biggm\rvert \cos\varphi det\begin{bmatrix}
+-r\sin\varphi\sin\theta & r\cos\varphi\cos\theta\\
+r\sin\varphi\cos\theta & r\cos\varphi\sin\theta\\
+\end{bmatrix} 
+- 0 + 
+(-r\sin\varphi)det \begin{bmatrix}
+\sin\varphi\cos\theta & -r\sin\varphi\sin\theta \\
+\sin\varphi\sin\theta & r\sin\varphi\cos\theta \\
+\end{bmatrix}\Biggm\lvert \\
+&=\rvert r^2\cos\varphi(\sin\varphi\cos\varphi\sin^2\theta - \sin\varphi\cos\varphi\cos^2\theta) - r\sin\varphi(r\sin^2\varphi\cos^2\theta - (-r\sin^2\varphi\sin^2\theta)\lvert\\
+&= \rvert r^2\cos^2\varphi\sin\varphi(\sin^2\theta+\cos^2\theta) - r^2\sin\varphi\sin^2\varphi(\cos^2\theta + \sin^2\theta)\lvert\\
+&= \rvert -r^2\sin\varphi(\cos^2\varphi + \sin^2\varphi)\lvert\\ 
+&= \rvert -r^2 \sin\varphi \lvert \\
+&= r^2 \sin\varphi
+\end{aligned}
+$$
+
+Thus,
+
+> **Spherical Coordinates:** $\int\int_S fdA = \int\int_{G^{-1}_\text{sph}(S)} f(r\sin\varphi\cos\theta, r\sin\varphi\sin\theta, r\cos\varphi)r^2\sin\varphi drd\theta dz$
+
+That was a lot of work to derive these three coordinate systems. Hence, most students just simply remember the coordinate system with a rough understanding how one would derive the coordinate system. The next topic revisits improper integrals which I won't get into because that should be a review from last year. Except in MATH2000, we deal in higher dimensions.
+
+### Integration of Vectors
+
+The course now begins on Vector Calculus. We are no longer constrained to finding area under the graph of some function $f: \mathbb{R}^n \to \mathbb{R}$. The course 
+shifts its focus to integration functions $F: U\subseteq\mathbb{R}^n\to\mathbb{R}^n$ which describes a vector field. In other words, a vector field is a function where the domain and range have the same dimensions. This is not a Physics class but you will be seeing a lot of applications and relation to Physics. Personally, I view a field as the forces that determines the path (direction) and magnitude of any object dropped into any area under the field's influence. We can think of the graviational field or the electric field for instance. Earth's gravitational field pulls any objects towards it but with different intensity. If I was on the surface of Earth or even on Earth's low orbit, the gravitational pull exerted by Earth is strong compared to a satellite orbiting around Mars for instance. But visualizing a vector field using Gravity is dull to me. How I like to visualize is a whirlpool where arrows are drawin in spiral paths (sorts of reminds me of phase plane portraits in MATH2454 ODE). 
+
+![a spiral vector field](https://i.stack.imgur.com/yg6bo.gif)
+
+If I was to drop any object down any point in the field, you would be able to predict the trajectory of the object from the vector field. At least that's how I thought of it but I am not into analysis and I also didn't exactly do that well in the course. So take my words with a grain of salt.
+
+It is not important at all to know the application of Physics in this course. It's just neat to see how interdisciplinary Mathematics is. Regardless, I purged all my Physics knowledge right after I made the decision to switch into Math so whatever I am saying could be very wrong. The first major concept in vector calculus that was introduced was line integrals or arc length which you could be familiar with if you have taken MATH1004, Calculus for Engineers, if for some odd reason your academic background was in Engineering prior to switching (or trying to switch) into Math. 
+Line integrals allows you to calculate the circumference of a circle.
+
+
 
 ---
 
@@ -474,4 +622,10 @@ The SAT option given to us because of TA strike may have influenced our decision
 
 Overall, the course was good but I wished I took my studies more seriously. There are definitely a lot of gaps in my knowledge in the course and I messed up big time on the final exam. While I do not think my failure to understand the winter semester material will negatively impact my ability to do my future courses seriously, I do feel a bit upset to myself that I had another opportunity to learn multivariable calculus and I blew it. I definitely understand the material much more now than I did 6-7 years ago but it is not to the level I would be satisfied with. Also rip my CGPA but I guess that's what you get when you slack off.
 
+# Credits:
 
+* MATH2000 Notes From Charles Starling
+* [MAT237 Notes from Tyler Holden](http://home.tykenho.com/LectureNotes237.pdf)
+  * Notes I found online. Never taken a course with Tyler Holden but I heard he is a great prof from classmates who have taken courses with him
+* [MAT237 Lecture Notes 2018-2019](http://www.math.toronto.edu/courses/mat237y1/20189/notes/Contents.html)
+  * A link I randomly stumbled upon when trying to figure out what zero content was. These notes heavily follow Folland's textbook.
